# pick-and-place

./: README.md  main.py  pyproject.toml
rdk/: estacion_practica_tablero.rdk
resources/components/: _PIEZA_BaseDeTrabajo.STL  _PIEZA_Bloque20x30x10.STL  _PIEZA_Bloque20x30x20.STL  _PIEZA_Bloque20x30x30.STL  _PIEZA_Bloque20x30x40.STL  _PIEZA_RebordeBaseDeTrabajoParaBloques.STL
resources/robots/: Zimmer-HRC-03-Gripper.robot
